fixed alignment on delete button

--- a/app/assets/stylesheets/vines.css.scss
+++ b/app/assets/stylesheets/vines.css.scss
@@ -11,3 +11,8 @@ video {
   width: 400px;
   height :400px;
 }
+
+.clips video {
+  width: 270px;
+  height: 284px;
+}
